--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Ecoverde</a>
+			<a class="navbar-brand" href="index.html">
+				<img src="images/logo3.png" alt="">
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
@@ -407,7 +409,7 @@
 					<div class="media block-6 services services-2">
 						<div class="media-body py-md-4 text-center">
 							<div class="icon mb-1 d-flex align-items-center justify-content-center"><span>01</span>
-								<img src="images/blob.svg" alt="">
+								<!-- <img src="images/blob.svg" alt=""> -->
 							</div>
 							<h3>Evaluate Property</h3>
 							<p>A small river named Duden flows by their place and supplies it with the necessary
@@ -419,7 +421,7 @@
 					<div class="media block-6 services services-2">
 						<div class="media-body py-md-4 text-center">
 							<div class="icon mb-1 d-flex align-items-center justify-content-center"><span>02</span>
-								<img src="images/blob.svg" alt="">
+								<!-- <img src="images/blob.svg" alt=""> -->
 							</div>
 							<h3>Meet Your Agent</h3>
 							<p>A small river named Duden flows by their place and supplies it with the necessary
@@ -431,7 +433,7 @@
 					<div class="media block-6 services services-2">
 						<div class="media-body py-md-4 text-center">
 							<div class="icon mb-1 d-flex align-items-center justify-content-center"><span>03</span>
-								<img src="images/blob.svg" alt="">
+								<!-- <img src="images/blob.svg" alt=""> -->
 							</div>
 							<h3>Close the Deal</h3>
 							<p>A small river named Duden flows by their place and supplies it with the necessary
@@ -443,7 +445,7 @@
 					<div class="media block-6 services services-2">
 						<div class="media-body py-md-4 text-center">
 							<div class="icon mb-1 d-flex align-items-center justify-content-center"><span>04</span>
-								<img src="images/blob.svg" alt="">
+								<!-- <img src="images/blob.svg" alt=""> -->
 							</div>
 							<h3>Have Your Property</h3>
 							<p>A small river named Duden flows by their place and supplies it with the necessary
