Issues fixed ad detaild added to pages

--- a/agent.html
+++ b/agent.html
@@ -25,7 +25,9 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Ecoverde</a>
+			<a class="navbar-brand" href="index.html">
+				<img src="images/logo_1.png" alt="">
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
@@ -39,7 +41,7 @@
 					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 					<li class="nav-item"><a href="properties.html" class="nav-link">Properties</a></li>
 					<!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="contact.php" class="nav-link">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -188,8 +190,8 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Ecoverde</h2>
-						<p>Far far away, behind the word mountains, far from the countries.</p>
+						<h2 class="ftco-heading-2">Al Farooq Real Estate</h2>
+						<p>He is not a full man who does not own a piece of land.</p>
 						<ul class="ftco-footer-social list-unstyled mt-5">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -236,10 +238,10 @@
 							<ul>
 								<li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View,
 										San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+92 330
+											8291900</span></a></li>
 								<li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span
-											class="text">info@yourdomain.com</span></a></li>
+											class="text">alfarooqestate911@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -249,8 +251,8 @@
 				<div class="col-md-12 text-center">
 					Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script> All rights reserved
-				</p>
-			</div>
+					</p>
+				</div>
 			</div>
 		</div>
 	</footer>
