--- a/properties-single.html
+++ b/properties-single.html
@@ -25,7 +25,9 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Ecoverde</a>
+			<a class="navbar-brand" href="index.html">
+				<img src="images/logo_1.png" alt="">
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
@@ -39,7 +41,7 @@
 					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 					<li class="nav-item active"><a href="properties.html" class="nav-link">Properties</a></li>
 					<!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="contact.php" class="nav-link">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -55,7 +57,8 @@
 					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
 									class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a
 								href="properties.html">Properties <i class="fa fa-chevron-right"></i></a></span>
-						<span>Properties Single <i class="fa fa-chevron-right"></i></span></p>
+						<span>Properties Single <i class="fa fa-chevron-right"></i></span>
+					</p>
 					<h1 class="mb-3 bread">Property Details</h1>
 				</div>
 			</div>
@@ -68,10 +71,10 @@
 				<div class="col-md-12">
 					<div class="property-details">
 						<div class="img" style="background-image: url(images/work-1.jpg);">
-							<a href="https://vimeo.com/45830194"
+							<!-- <a href="https://vimeo.com/45830194"
 								class="img-video popup-vimeo d-flex align-items-center justify-content-center">
 								<span class="fa fa-play"></span>
-							</a>
+							</a> -->
 						</div>
 						<div class="text">
 							<span class="subheading">Oakland</span>
@@ -304,8 +307,8 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Ecoverde</h2>
-						<p>Far far away, behind the word mountains, far from the countries.</p>
+						<h2 class="ftco-heading-2">Al Farooq Real Estate</h2>
+						<p>He is not a full man who does not own a piece of land.</p>
 						<ul class="ftco-footer-social list-unstyled mt-5">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -352,10 +355,10 @@
 							<ul>
 								<li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View,
 										San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+92 330
+											8291900</span></a></li>
 								<li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span
-											class="text">info@yourdomain.com</span></a></li>
+											class="text">alfarooqestate911@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -365,8 +368,8 @@
 				<div class="col-md-12 text-center">
 					Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script> All rights reserved
-				</p>
-			</div>
+					</p>
+				</div>
 			</div>
 		</div>
 	</footer>
