--- a/properties.html
+++ b/properties.html
@@ -25,7 +25,9 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Ecoverde</a>
+			<a class="navbar-brand" href="index.html">
+				<img src="images/logo_1.png" alt="">
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
@@ -39,7 +41,7 @@
 					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 					<li class="nav-item active"><a href="properties.html" class="nav-link">Properties</a></li>
 					<!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="contact.php" class="nav-link">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -165,9 +167,10 @@
 								<li><span class="flaticon-bathtub"></span>2</li>
 								<li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
 							</ul>
-							<h3><a href="#">The Blue Sky Home</a></h3>
+							<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
 							<span class="location">Oakland</span>
-							<a href="#" class="d-flex align-items-center justify-content-center btn-custom">
+							<a href="properties-single.html"
+								class="d-flex align-items-center justify-content-center btn-custom">
 								<span class="fa fa-link"></span>
 							</a>
 							<div class="list-team d-flex align-items-center mt-2 pt-2 border-top">
@@ -400,10 +403,10 @@
 							<ul>
 								<li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View,
 										San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+92 330
+											8291900</span></a></li>
 								<li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span
-											class="text">info@yourdomain.com</span></a></li>
+											class="text">alfarooqestate911@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -413,8 +416,8 @@
 				<div class="col-md-12 text-center">
 					Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script> All rights reserved
-				</p>
-			</div>
+					</p>
+				</div>
 			</div>
 		</div>
 	</footer>
