--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Farooq Real Estate  </title>
+  <title>Farooq Real Estate </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -25,7 +25,9 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Ecoverde</a>
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo_1.png" alt="">
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
@@ -39,7 +41,7 @@
           <li class="nav-item active"><a href="services.html" class="nav-link">Services</a></li>
           <li class="nav-item"><a href="properties.html" class="nav-link">Properties</a></li>
           <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="contact.php" class="nav-link">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -120,7 +122,7 @@
           <div class="media block-6 services services-2">
             <div class="media-body py-md-4 text-center">
               <div class="icon mb-1 d-flex align-items-center justify-content-center"><span>01</span>
-                <img src="images/blob.svg" alt="">
+                <!-- <img src="images/blob.svg" alt=""> -->
               </div>
               <h3>Evaluate Property</h3>
               <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -131,7 +133,7 @@
           <div class="media block-6 services services-2">
             <div class="media-body py-md-4 text-center">
               <div class="icon mb-1 d-flex align-items-center justify-content-center"><span>02</span>
-                <img src="images/blob.svg" alt="">
+                <!-- <img src="images/blob.svg" alt=""> -->
               </div>
               <h3>Meet Your Agent</h3>
               <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -142,7 +144,7 @@
           <div class="media block-6 services services-2">
             <div class="media-body py-md-4 text-center">
               <div class="icon mb-1 d-flex align-items-center justify-content-center"><span>03</span>
-                <img src="images/blob.svg" alt="">
+                <!-- <img src="images/blob.svg" alt=""> -->
               </div>
               <h3>Close the Deal</h3>
               <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -153,7 +155,7 @@
           <div class="media block-6 services services-2">
             <div class="media-body py-md-4 text-center">
               <div class="icon mb-1 d-flex align-items-center justify-content-center"><span>04</span>
-                <img src="images/blob.svg" alt="">
+                <!-- <img src="images/blob.svg" alt=""> -->
               </div>
               <h3>Have Your Property</h3>
               <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -306,9 +308,9 @@
               <ul>
                 <li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco,
                     California, USA</span></li>
-                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+92 330 8291900</span></a></li>
                 <li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span
-                      class="text">info@yourdomain.com</span></a></li>
+                      class="text">alfarooqestate911@gmail.com</span></a></li>
               </ul>
             </div>
           </div>
@@ -318,8 +320,8 @@
         <div class="col-md-12 text-center">
           Copyright &copy;
           <script>document.write(new Date().getFullYear());</script> All rights reserved
-        </p>
-      </div>
+          </p>
+        </div>
       </div>
     </div>
   </footer>
