Footer and contact for has been fixed

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
         </div>
         <div class="col-md-5 wrap-about py-md-5 ftco-animate">
           <div class="heading-section pr-md-5">
-            <h2 class="mb-4">Ecoverde Real Estate</h2>
+            <h2 class="mb-4">Farooq Real Estate</h2>
 
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
               paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
@@ -88,7 +88,7 @@
     </div>
   </section>
 
-  <section class="ftco-counter img" id="section-counter">
+  <!-- <section class="ftco-counter img" id="section-counter">
     <div class="container">
       <div class="row pt-md-5">
         <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
@@ -125,7 +125,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="ftco-section testimony-section bg-light">
     <div class="container">
@@ -225,75 +225,73 @@
   </section>
 
   <footer class="ftco-footer ftco-section">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Al Farooq Real Estate</h2>
-            <p>He is not a full man who does not own a piece of land.</p>p>
-            <ul class="ftco-footer-social list-unstyled mt-5">
-              <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4 ml-md-4">
-            <h2 class="ftco-heading-2">Community</h2>
-            <ul class="list-unstyled">
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Search Properties</a></li>
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>For Agents</a></li>
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Reviews</a></li>
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>FAQs</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4 ml-md-4">
-            <h2 class="ftco-heading-2">About Us</h2>
-            <ul class="list-unstyled">
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Our Story</a></li>
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Meet the team</a></li>
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Careers</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Company</h2>
-            <ul class="list-unstyled">
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Press</a></li>
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
-              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Careers</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Have a Questions?</h2>
-            <div class="block-23 mb-3">
-              <ul>
-                <li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco,
-                    California, USA</span></li>
-                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+92 330 8291900</span></a></li>
-                <li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span
-                      class="text">alfarooqestate911@gmail.com</span></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 text-center">
-						Copyright &copy;
-						<script>document.write(new Date().getFullYear());</script> All rights reserved
+		<div class="container">
+			<div class="row mb-5">
+				<div class="col-md">
+					<div class="ftco-footer-widget mb-4">
+						<h2 class="ftco-heading-2">Al Farooq Real Estate</h2>
+						<p>He is not a full man who does not own a piece of land.</p>
+						<ul class="ftco-footer-social list-unstyled mt-5">
+							<!-- <li class="ftco-animate"><a href="" target="_blank"><span class="fa fa-twitter"></span></a></li> -->
+							<li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100088534601486&mibextid=ZbWKwL" target="_blank"><span class="fa fa-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://instagram.com/alfarooqestate?igshid=NGExMmI2YTkyZg==" target="_blank"><span class="fa fa-instagram"></span></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md">
+					<div class="ftco-footer-widget mb-4 ml-md-4">
+						<h2 class="ftco-heading-2">Community</h2>
+						<ul class="list-unstyled">
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Search Properties</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>For Agents</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Reviews</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>FAQs</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md">
+					<div class="ftco-footer-widget mb-4 ml-md-4">
+						<h2 class="ftco-heading-2">About Us</h2>
+						<ul class="list-unstyled">
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Our Story</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Meet the team</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Careers</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md">
+					<div class="ftco-footer-widget mb-4">
+						<h2 class="ftco-heading-2">Company</h2>
+						<ul class="list-unstyled">
+							<li><a href="about.html"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+							<li><a href="properties.html"><span class="fa fa-chevron-right mr-2"></span>Properties</a></li>
+							<li><a href="contact.php"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md">
+					<div class="ftco-footer-widget mb-4">
+						<h2 class="ftco-heading-2">Have a Questions?</h2>
+						<div class="block-23 mb-3">
+							<ul>
+								<li><span class="icon fa fa-map"></span><span class="text">Faisal Apartment Shop #4 , KDA Scheme No.1 Mirah Muhammad Shah Road Near Spar super Store &amp; Siama Twins Tower KDA Muhammad Ali Society Karachi Pakistan.</span></li>
+								<li><a href="tel:+923308291900"><span class="icon fa fa-phone"></span><span class="text">+92 3228291900</span></a></li>
+								<li><a href="mailto:alfarooqestate911@gmail.com"><span class="icon fa fa-envelope pr-4"></span><span
+											class="text">alfarooqestate911@gmail.com</span></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 text-center">
+					Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script> All rights reserved
 					</p>
 				</div>
-      </div>
-    </div>
-  </footer>
+			</div>
+		</div>
+	</footer>
 
 
 
