--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
 	<title>Farooq Real Estate </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap"
 		rel="stylesheet">
-
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 	<link rel="stylesheet" href="css/animate.css">
-
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
-
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="images/logo_1.png" type="image/x-icon">
 </head>
 
 <body>
@@ -57,14 +53,14 @@
 						<h1 class="mb-4">Find Perfect <br>House From Your Area.</h1>
 						<p style="font-size: 18px;">From as low as $20 A small river named Duden flows by their place
 							and supplies it with the necessary regelialia.</p>
-						<p><a href="#" class="btn btn-primary py-3 px-4">View all properties</a></p>
+						<p><a href="properties.html" class="btn btn-primary py-3 px-4">View all properties</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<section class="ftco-section ftco-no-pb ftco-no-pt search-bg">
+	<!-- <section class="ftco-section ftco-no-pb ftco-no-pt search-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -143,7 +139,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="ftco-section ftco-no-pb ftco-no-pt bg-primary">
 		<div class="container">
@@ -466,7 +462,7 @@
 				</div>
 				<div class="col-md-5 wrap-about py-md-5 ftco-animate">
 					<div class="heading-section pr-md-5">
-						<h2 class="mb-4">Ecoverde Real Estate</h2>
+						<h2 class="mb-4">Farooq Real Estate</h2>
 
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.
 							It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
@@ -482,7 +478,7 @@
 		</div>
 	</section>
 
-	<section class="ftco-counter img" id="section-counter">
+	<!-- <section class="ftco-counter img" id="section-counter">
 		<div class="container">
 			<div class="row pt-md-5">
 				<div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
@@ -519,7 +515,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="ftco-section testimony-section bg-light">
 		<div class="container">
@@ -680,7 +676,7 @@
 	</section>
 
 
-	<section class="ftco-section ftco-no-pt">
+	<!-- <section class="ftco-section ftco-no-pt">
 		<div class="container">
 			<div class="row justify-content-center mb-5">
 				<div class="col-md-7 heading-section text-center ftco-animate">
@@ -751,7 +747,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
@@ -761,9 +757,9 @@
 						<h2 class="ftco-heading-2">Al Farooq Real Estate</h2>
 						<p>He is not a full man who does not own a piece of land.</p>
 						<ul class="ftco-footer-social list-unstyled mt-5">
-							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
+							<!-- <li class="ftco-animate"><a href="" target="_blank"><span class="fa fa-twitter"></span></a></li> -->
+							<li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100088534601486&mibextid=ZbWKwL" target="_blank"><span class="fa fa-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://instagram.com/alfarooqestate?igshid=NGExMmI2YTkyZg==" target="_blank"><span class="fa fa-instagram"></span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -792,10 +788,9 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Company</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Press</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Careers</a></li>
+							<li><a href="about.html"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+							<li><a href="properties.html"><span class="fa fa-chevron-right mr-2"></span>Properties</a></li>
+							<li><a href="contact.php"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -804,11 +799,9 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View,
-										San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+92 330
-											8291900</span></a></li>
-								<li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span
+								<li><span class="icon fa fa-map"></span><span class="text">Faisal Apartment Shop #4 , KDA Scheme No.1 Mirah Muhammad Shah Road Near Spar super Store &amp; Siama Twins Tower KDA Muhammad Ali Society Karachi Pakistan.</span></li>
+								<li><a href="tel:+923308291900"><span class="icon fa fa-phone"></span><span class="text">+92 3228291900</span></a></li>
+								<li><a href="mailto:alfarooqestate911@gmail.com"><span class="icon fa fa-envelope pr-4"></span><span
 											class="text">alfarooqestate911@gmail.com</span></a></li>
 							</ul>
 						</div>
