--- a/properties-single.html
+++ b/properties-single.html
@@ -310,9 +310,9 @@
 						<h2 class="ftco-heading-2">Al Farooq Real Estate</h2>
 						<p>He is not a full man who does not own a piece of land.</p>
 						<ul class="ftco-footer-social list-unstyled mt-5">
-							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
+							<!-- <li class="ftco-animate"><a href="" target="_blank"><span class="fa fa-twitter"></span></a></li> -->
+							<li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100088534601486&mibextid=ZbWKwL" target="_blank"><span class="fa fa-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://instagram.com/alfarooqestate?igshid=NGExMmI2YTkyZg==" target="_blank"><span class="fa fa-instagram"></span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -341,10 +341,9 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Company</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Press</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Careers</a></li>
+							<li><a href="about.html"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+							<li><a href="properties.html"><span class="fa fa-chevron-right mr-2"></span>Properties</a></li>
+							<li><a href="contact.php"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -353,11 +352,9 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View,
-										San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+92 330
-											8291900</span></a></li>
-								<li><a href="#"><span class="icon fa fa-envelope pr-4"></span><span
+								<li><span class="icon fa fa-map"></span><span class="text">Faisal Apartment Shop #4 , KDA Scheme No.1 Mirah Muhammad Shah Road Near Spar super Store &amp; Siama Twins Tower KDA Muhammad Ali Society Karachi Pakistan.</span></li>
+								<li><a href="tel:+923308291900"><span class="icon fa fa-phone"></span><span class="text">+92 3228291900</span></a></li>
+								<li><a href="mailto:alfarooqestate911@gmail.com"><span class="icon fa fa-envelope pr-4"></span><span
 											class="text">alfarooqestate911@gmail.com</span></a></li>
 							</ul>
 						</div>
